Fixed code snippet horizontal scrolling

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -120,6 +120,7 @@ pre {
   border: 0.1rem solid var(--color-primary);
   border-radius: 0.5rem;
   padding: 1rem;
+  overflow-x: auto;
 }
 
 /* Text selection */
@@ -142,14 +143,26 @@ span::selection {
 }
 
 /* Scrollbar */
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 0.75rem;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar:horizontal {
+  height: 0.75rem;
+}
+
+::-webkit-scrollbar-track {
   box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-track:horizontal {
+  box-shadow: none;
+}
+
+::-webkit-scrollbar-thumb {
   background-color: var(--color-primary);
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  border-radius: 0 0 0.3rem 0.3rem;
 }
